--- a/products.html
+++ b/products.html
@@ -30,7 +30,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
       <div class="container">
-        <a class="navbar-brand" href="#"><img src="images/logo.png" class="img-fluid logo"></a>
+        <a class="navbar-brand" href="index"><img src="images/logo.png" class="img-fluid logo"></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -49,7 +49,7 @@
               <a class="nav-link" href="index">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#section2">Why Marcson?</a>
+              <a class="nav-link" href="index">Why Marcson?</a>
             </li>
             
             </li>
