--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
             <p class="p-2">Marcson is a fully indigenous Nigerian company.</p>
             
-            <img src="images/abstract2.svg" class="img-fluid img-top" />
+            <img src="images/abstract2.png" class="img-fluid img-top" />
         
 
             <p class="p-2">
