correct broken links

--- a/colibel_drops/index.html
+++ b/colibel_drops/index.html
@@ -43,7 +43,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
       <div class="container">
-        <a class="navbar-brand" href="#"><img src="../images/logo.png" class="img-fluid logo"></a>
+        <a class="navbar-brand" href="../index"><img src="../images/logo.png" class="img-fluid logo"></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -59,17 +59,17 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item ">
-              <a class="nav-link" href="index">Home</a>
+              <a class="nav-link" href="../index">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#section2">Why Marcson?</a>
+              <a class="nav-link" href="../index">Why Marcson?</a>
             </li>
             
             </li>
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="contact"
+                href="../contact"
                 >Contact</a
               >
             </li>
@@ -239,15 +239,15 @@
   <h4 class="sub-footer"> Company </h4>
   
   
-  <a href="contact">
+  <a href="../contact">
   <li class="li-2">Contact Us</li>
   </a>
   
-  <a href="products">
+  <a href="../products">
   <li class="li-2"> Products</li>
   </a>
   
-  <a href="faqs">
+  <a href="../faqs">
   <li class="li-2 bottom"> FAQs </li>
   </a>
   
