--- a/index.html
+++ b/index.html
@@ -208,6 +208,8 @@
           <div class="col-sm-6">
           <h6 class="number">+234-807-411-5577</h6>
 
+          <h6 class="address">info@marcsoncare.com , <br> marcsoncare@gmail.com</h6>
+
           <h6 class="address"> 29 Agric road, Cele bus stop, Isawo <br>
             Ikorodu, Lagos, NIgeria. 104224</h6>
 
