--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <meta name="theme-color" content="#68E79D" />
+    <meta name="theme-color" content="#2B643B" />
 
     <!-- Bootstrap CSS -->
     <link
