--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-145057361-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-145057361-2');
+</script>
+
     <meta name="theme-color" content="#2B643B" />
 
     <!-- Bootstrap CSS -->
