--- a/contact.html
+++ b/contact.html
@@ -60,6 +60,15 @@
                 >Contact</a
               >
             </li>
+
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="stories"
+                >Stories</a
+              >
+            </li>
+
           </ul>
           <!--
         <form class="form-inline my-2 my-lg-0">
