--- a/index.html
+++ b/index.html
@@ -84,6 +84,16 @@
                 >Contact</a
               >
             </li>
+
+
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="stories"
+                >Stories</a
+              >
+            </li>
+
           </ul>
           <!--
         <form class="form-inline my-2 my-lg-0">
