--- a/stories.html
+++ b/stories.html
@@ -130,16 +130,8 @@
 
         <div class="row">
             <div class="column">
-              <img src="images/apple-close-up-delicious-food-533343.jpg">
-              <img src="">
-              <img src="">
-              <img src="">
-              <img src="">
-              <img src="">
-              <img src="">
-            </div>
-            <div class="column">
-              <img src="images/clear-glass-h2o-bottle-113734.jpg">
+              <img src="images/3.jpg">
+              <img src="images/7.jpg">
               <img src="">
               <img src="">
               <img src="">
@@ -147,8 +139,7 @@
               <img src="">
             </div>
             <div class="column">
-              <img src="images/six-fruit-cereals-in-clear-glass-mason-jars-on-white-surface-1640768.jpg">
-              <img src="">
+              <img src="images/1.jpg">
               <img src="">
               <img src="">
               <img src="">
@@ -156,7 +147,16 @@
               <img src="">
             </div>
             <div class="column">
-              <img src="images/clear-glass-h2o-bottle-113734.jpg">
+              <img src="images/4.jpg">
+              <img src="images/5.jpg">
+              <img src="">
+              <img src="">
+              <img src="">
+              <img src="">
+              <img src="">
+            </div>
+            <div class="column">
+              <img src="images/2.jpg">
               <img src="">
               <img src="">
               <img src="">
